unpackaged/main/default/objects/ia_crm__Sales_Quote_Item__c/ia_crm__Sales_Quote_Item__c.object-meta.xml
<CustomObject>
    <description>Line items for Sales Quote object.</description>
    <label>Sales Quote Item</label>
    <nameField>
        <label>Line No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Quote Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>