unpackaged/main/default/objects/ia_crm__Sales_Quote_Item__c/fields/ia_crm__Item__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Item__c</fullName>
    <label>Item</label>
    <length>40</length>
    <type>Text</type>
</CustomField>