unpackaged/main/default/objects/ia_crm__Sales_Quote_Item__c/fields/ia_crm__Quantity__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Quantity__c</fullName>
    <label>Quantity</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>