unpackaged/main/default/objects/ia_crm__Sales_Quote_Item__c/fields/ia_crm__Sales_Quote__c.field-meta.xml
<CustomField>
    <fullName>ia_crm__Sales_Quote__c</fullName>
    <label>Sales Quote</label>
    <referenceTo>ia_crm__Sales_Quote__c</referenceTo>
    <relationshipName>R00N40000001bdjpEAA</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>